Agrego tests validaciones faltantes